--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100vh;
   font-family: "Bai Jamjuree", sans-serif;
-  background-image: url(/images/bg-header-mobile.png);
+  background-image: url(../images/bg-header-mobile.png);
   background-repeat: no-repeat;
   background-size: 100%;
   font-size: 1.8rem;
