--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -49,7 +49,7 @@
 }
 @media (min-width: 1100px) {
   body {
-    background-image: url(/images/bg-header-desktop.png);
+    background-image: url(../images/bg-header-desktop.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
