--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   width: 100%;
   height: 100vh;
   font-family: "Bai Jamjuree", sans-serif;
-  background-image: url(../images/bg-header-mobile.png);
+  background-image: url(images/bg-header-mobile.png);
   background-repeat: no-repeat;
   background-size: 100%;
   font-size: 1.8rem;
@@ -170,7 +170,7 @@ body {
 }
 @media (min-width: 1100px) {
   body {
-    background-image: url(../images/bg-header-desktop.png);
+    background-image: url(images/bg-header-desktop.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
